--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,6 +39,7 @@ subjects:
 - !lcsh 'Adventure and adventurers -- Fiction'
 - !lcc 'PQ'
 - !lcsh 'Blas, Gil (Fictitious character) -- Fiction'
+- GITenberg
 title: "De Zonderlinge Lotgevallen van Gil Blas van Santillano, deel 2 van 2\r\nDe\
   \ Spaansche Avonturier"
 url: http://www.gutenberg.org/ebooks/24630
